--- a/tut.html
+++ b/tut.html
@@ -110,7 +110,7 @@
 <li>Login to SIT via putty (ucpu2.ug.it.usyd.edu.au)</li>
 <li>Compiler is called <code>ghc</code>, interpreted is called <code>ghci</code></li>
 <li>Use text editor of choice</li>
-<li>Can follow slides at URL</li>
+<li>Can follow slides at https://dawil.github.com/hask-tut/tut.html</li>
 </ul>
 </section>
 <section id="values" class="slide level1">
