--- a/tut.html
+++ b/tut.html
@@ -110,7 +110,7 @@
 <li>Login to SIT via putty (ucpu2.ug.it.usyd.edu.au)</li>
 <li>Compiler is called <code>ghc</code>, interpreted is called <code>ghci</code></li>
 <li>Use text editor of choice</li>
-<li>Can follow slides at URL</li>
+<li>Can follow slides at https://dawil.github.com/hask-tut/tut.html</li>
 </ul>
 </section>
 <section id="values" class="slide level1">
@@ -137,7 +137,7 @@
 <li>let string50 = show 50</li>
 <li>length string50</li>
 </ul>
-<p>Visit http://dawil.github.com/hask-tut/ (sum [1,5..5000] / 20)</p>
+<p>Visit http://dawil.github.com/hask-tut/(sum [1,5..5000] / 20).html (Don't include the parentheses: () )</p>
 </section>
 <section id="custom-functions" class="slide level1">
 <h1>1.2 - Custom Functions</h1>
@@ -154,7 +154,7 @@
         fib 1 = 1
         fib n = fib (n-1) + fib (n-2)
     :}</code></pre>
-<p>http://dawil.github.com/hask-tut/ (fib 12)</p>
+<p>http://dawil.github.com/hask-tut/(fib 12).html</p>
 </section>
 <section id="more-functions" class="slide level1">
 <h1>1.3 - More Functions</h1>
@@ -168,7 +168,7 @@
 <li>let sum = foldr (+) 0 [1,2,3]</li>
 <li><p>let sumTwoLists = sum . zipWith (+)</p></li>
 </ul>
-<p>http://dawil.github.com/hask-tut/ (sumTwoLists [1..5000] [1,-1..(-333)])</p>
+<p>http://dawil.github.com/hask-tut/(sumTwoLists [1..5000] [1,-1..(-333)]).html</p>
 </section>
 <section id="control-flow-looping-and-if-statements" class="slide level1">
 <h1>1.3 - Control Flow: Looping and If-Statements</h1>
@@ -200,7 +200,7 @@ if False
 <li>let fibs = 1 : 1 : zipWith (+) fibs (tail fibs)</li>
 <li>take 40 fibs</li>
 </ul>
-<p>http://dawil.github.com/hask-tut/ (sum (take 40 fibs))</p>
+<p>http://dawil.github.com/hask-tut/(sum (take 40 fibs)).html</p>
 </section>
 <section id="b---aside-lazy-textstrict-text" class="slide level1">
 <h1>2.1b - (Aside) Lazy Text/Strict Text</h1>
